# rs-core

./: ._DbOption.toml  ._target  .gitignore  AGENTS.md  BUGFIX_BATCH_QUERY.md  CHANGELOG.md  CHANGELOG_SPINE.md  CLAUDE.md  Cargo-backup.toml  Cargo-gitee.toml  Cargo-local.toml  Cargo-test-no-bevy.toml  Cargo.toml  DRNS_DRNE_FIX_SUMMARY.md  DbOption-slyk.toml  DbOption.toml  DbOption_ABA.toml  DbOption_ams.toml  DbOption_kuzu_example.toml  FIXES_SUMMARY.md  FRADIUS_FLOW_ANALYSIS.md  GENSEC_ROTATION_FIX_PLAN.md  GITHUB_ACTIONS_QUICKSTART.md  GRAPH_QUERY_REFACTOR_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  KUZU_ENABLEMENT_GUIDE.md  KUZU_FIX_SUMMARY.md  MEMORY_DB_MIGRATION.md  NOUN_HIERARCHY_COMPLETE_REPORT.md  NOUN_HIERARCHY_CORRECT_README.md  NOUN_HIERARCHY_SUMMARY.md  NOUN类型表.xlsx  PHASE1_SUMMARY.md  PHASE2_COMPILATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SYNC_SUMMARY.md  PHASE4_PERFORMANCE_SUMMARY.md  QUERY_OPTIMIZATION_ANALYSIS.md  QUERY_PROVIDER_IMPLEMENTATION.md  README.en.md  (+46 more)
.cargo/: config.toml
.ck/: CHANGELOG.md.ck  CHANGELOG_SPINE.md.ck  Cargo-local.toml.ck  Cargo.toml.ck  DRNS_DRNE_FIX_SUMMARY.md.ck  DbOption-slyk.toml.ck  DbOption_ABA.toml.ck  FIXES_SUMMARY.md.ck  GITHUB_ACTIONS_QUICKSTART.md.ck  MEMORY_DB_MIGRATION.md.ck  README.en.md.ck  error.log.ck  get_full_schema.txt.ck  manifest.json  run_bool_debug.sh.ck  test_panels_run.log.ck  数据库架构文档.md.ck
.cursor/: AiosDBMgr 迁移到 QueryProvider 计划.plan.md  drns_drne_end_face_control_implementation.md  drns_drne_斜切端面修复说明.md  multi_segment_path_test_results.md  poss-pose-spine-3631319f.plan.md  sweep_path_implementation_complete.md  sweep_path_migration_status.md  sweep_solid_advanced_features_implementation.md  sweep_solid_csg_obj_export_implementation.md  提交命令.sh  斜切圆柱端面修复说明.md  端面破面问题修复说明.md  调整 SweepSolid 处理 GENSEC SPINE 多点和弧线.plan.md  重构完成总结.md  重构进度-阶段一完成.md  重构进度-阶段二完成.md
.serena/: project.yml
.windsurf/: .gitignore  windsurf.config.js
benches/: descendant_query_bench.rs  room_query_bench.rs  sync_benchmark.rs
bins/: att_AIDGRO  att_AIDLIN  att_ANCI  att_BWLD  att_ENDATU  att_EYRD  att_RCPL  att_SUPC  att_SUPPO  att_TRNB  att_VSPR
data/: ELBO.json  PIPE.json  attlib_parsed.json  kuzu_1112_sync  kuzu_1112_sync.wal  kuzu_db  kuzu_first_site_test  kuzu_first_site_test.wal  kuzu_pe_sync_test  kuzu_pe_sync_test.wal  kuzu_test2
doc/: progress.md
docs/: ATGTSX_OWNER_ANALYSIS.md  ATTLIB_PYTHON_ANALYSIS_SUMMARY.md  CI_CD_SETUP.md  CUTP_ATTRIBUTE_PROCESSING.md  DB_Noun_structure_analysis.md  DEBUG_MACROS_USAGE.md  DEPLOYMENT_SUMMARY.md  GENSEC_GEOMETRY_ANALYSIS.md  IDA_PRO_ENDATU_ANALYSIS.md  IDA_VERIFICATION_SUMMARY.md  KUZU_USAGE.md  ORIENTATION_CALC_CORE_DLL.md  PDMS_NOUN_ATTRIBUTE_MAPPING.md  PROFILE_PROCESSOR_USAGE.md  PROFILE_REFACTORING_SUMMARY.md  QUERY_PROVIDER_GUIDE.md  RANGE_FEATURE.md  RsVec3_Usage_Guide.md  RsVec3_Vec3_Mixed_Operations.md  SURREAL_KUZU_SYNC_DESIGN.md  SWEEPLOFT_TRANSFORM_REFACTORING_PLAN.md  aabb_overlap_query_flowchart.md  attlib_analysis_report.md  attlib_naming_conventions.md  attlib_parsing_corrections.md  attlib_parsing_logic.md  attlib_parsing_verification_report.md  attlib_table_analysis.md  database_implementation_analysis.md  dblist_export_migration_guide.md  dblist_parser_refactor_report.md  ida_rvm_export_overview.md  kuzu_refactor_plan.md  neg_relate_ngmr_relate_analysis.md  orientation_calculation.md  query_noun_hierarchy_test_guide.md  query_tubi_insts_by_brans_analysis.md  spatial_calculation_flowchart.md  sqlite_rtree_usage.md  stage1_data_flow.md  (+2 more)
examples/: analyze_bang_in_stwall.rs  benchmark_kuzu_vs_surreal_queries.rs  check_refno.rs  clear_cache.rs  compare_fitt_implementations.rs  db1112_quick_test.rs  db1112_surreal_kuzu_benchmark.rs  debug_bran_21491_16521.rs  debug_coordinate_mapping.rs  debug_database_connection.rs  debug_direction_parsing.rs  debug_elbo_73967.rs  debug_fitt_analysis.rs  debug_geo_relate_reuse.rs  debug_macro_example.rs  debug_poinsp_fixed.rs  debug_poinsp_position.rs  debug_query_tubi_insts.rs  diagnose_query_tubi_insts.rs  fetch_bran_annotation.rs  find_elbo.rs  hybrid_database_demo.rs  import_type_hierarchy.rs  init_kuzu_db.rs  kuzu_json_schema_demo.rs  kuzu_query_demo.rs  kuzu_save_demo.rs  parse_1112_to_kuzu.rs  parse_atgtsx.rs  parse_attlib.rs  parse_elbo_attlib.rs  parse_pdms_to_kuzu.rs  query_noun_attrs.rs  query_provider_demo.rs  room_system_demo.rs  room_system_phase2_demo.rs  simple_sqlite_demo.rs  sqlite_spatial_demo.rs  test_all_panels_svg.rs  test_bang_simple.rs  (+21 more)
issues/: FITT位置计算差异分析.md  LOD_Mesh生成-快速参考.md  LOD_Mesh生成优化开发计划.md  重构query_take第一批.md
resource/: ssc_level.xlsx  专业分类.xlsx
scripts/: atnain_dump.txt  attlib_debug.py  attlib_scanner.py  check_bend_attrs.py  ci-prepare.sh  ci-restore.sh  decode_all_nouns.py  dump_all_atnain.py  e3d_attribute_parser.py  extract_all_nouns_from_ida.py  extract_hierarchy_from_attlib.py  extract_noun_hierarchy_from_attlib.py  final_atnain_analyzer.py  find_elbo.py  generate_attr_info.py  generate_attr_info_v2.py  generate_attr_markdown.py  generate_attr_metadata_surql.py  generate_noun_excel.py  generate_type_excel.py  generated_attr_info.json  generated_attr_info_v2.json  inspect_attlib_page.py  inspect_segments.py  output_debug.json  parse_atgtsx_owner.py  parse_attlib.py  parse_attlib_complete.py  parse_attlib_fixed.py  parse_attlib_fixed_backup.py  reverse_search_elbo.py  search_attlib_elbo.py  temp_analyze_atnain.py  temp_analyze_seg2.py  temp_analyze_seg4.py  temp_brute_search.py  temp_search_atnain.py  temp_search_noun_id.py  temp_search_pipe.py
src/: aql_types.rs  attlib_parser.rs  axis_param.rs  bevy_types.rs  consts.rs  create_attas_structs.rs  data_center.rs  data_state.rs  datacenter_options.rs  db_number.rs  debug_macros.rs  enso_types.rs  error.rs  geom_types.rs  lib.rs  main.rs  mesh_precision.rs  metadata_manager.rs  negative_mesh_type.rs  noun_attributes.rs  noun_graph.rs  options.rs  parsed_data.rs  pdms_data.rs  pdms_hash.rs  pdms_types.rs  pdms_user.rs  penetration.rs  plat_user.rs  plugging_material.rs  room_setting.rs  runtime.rs  rvm_types.rs  schema.rs  serde.rs  (+9 more)
(+1315 files in other folders)
