[package]
name = "aios_core"
version = "0.2.3"
edition = "2024"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [
    "bevy_transform",
    "bevy_math",
    "bevy_ecs",
    "bevy_reflect",
    "test",
    # "render",
    # "gen_model",
    # "sql",
    # "debug_spatial",
] #"occ", "gen_model", "sql"
redb = ["dep:redb"]
render = ["dep:bevy_render", "dep:bevy_mesh", "dep:bevy_asset"]
manifold = ["dep:manifold-sys"]
truck = [
    # "dep:truck-base",
    # "dep:truck-geotrait",
    # "dep:truck-geometry",
    # "dep:truck-polymesh",
    # "dep:truck-topology",
    # "dep:truck-modeling",
    # "dep:truck-meshalgo",
    # "dep:truck-stepio",
]
gen_model = ["manifold"]
debug_expr = []
debug_wire = []
debug_spatial = []
web = ["render"]
web_server = []  # Web UI feature for database management interface
sql = ["dep:sqlx"]
sqlite = ["dep:rusqlite"]  # SQLite 空间索引功能
mem-kv-save = []  # 额外保存PE数据到内存KV数据库
hh = []
test = []  # Test module feature
bevy_transform = ["dep:bevy_transform"]
bevy_math = ["dep:bevy_math"]
bevy_ecs = ["dep:bevy_ecs"]
bevy_reflect = ["dep:bevy_reflect"]


[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
deku = "0.16.0"
smol_str = { version = "0.3.2", features = ["serde"] }
glam = { version = "0.30.8", features = ["serde", "rkyv"] }
id_tree = { git = "https://gitee.com/happydpc/id_tree", features = [
    "serde_support",
] }
dashmap = { version = "=7.0.0-rc2", features = ["serde"] }
hexasphere = "15.0.0"
anyhow = "1.0.57"
#lyon = "1.0.0"
nalgebra = { version = "0.34.1", features = [
    "serde",
    "convert-glam030",
] }
parry3d = { version = "0.25.0", features = [
    "serde-serialize",
] }
parry2d = { version = "0.25.0", features = [
    "serde-serialize",
] }
tracing = "0.1.41"
approx = "0.5.1"
memchr = "2.5.0"
nom = "7.1.1"
itertools = "0.14.0"
flate2 = "1.1.1"
lazy_static = "1.4.0"
smallvec = "1.8.0"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "display"] }
bitflags = "2.4.0"
ordered-float = "5.1.0"
phf = { version = "0.11.2", features = ["macros"] }
derivative = "2.2.0"
dyn-clone = "1.0.9"
#axum-login = { version = "0.4.1"}
rstar = { git = "https://gitee.com/happydpc/rstar", features = ["serde"] }
uuid = "1.3.0"
config = "0.14.1"
calamine = { git = "https://gitee.com/happydpc/calamine" }

thiserror = "1.0.60"
log = "0.4.21"
simplelog = "0.12.2"
lru = "0.12"
num_cpus = "1.16"


bevy_transform = { git = "https://github.com/happyrust/bevy", package = "bevy_transform", features = [
    "serialize",
] }
bevy_math = { git = "https://github.com/happyrust/bevy", package = "bevy_math" }
bevy_ecs = { git = "https://github.com/happyrust/bevy", package = "bevy_ecs" }
bevy_reflect = { git = "https://github.com/happyrust/bevy", package = "bevy_reflect" }
bevy_render = { git = "https://github.com/happyrust/bevy", package = "bevy_render", optional = true }
bevy_mesh = { git = "https://github.com/happyrust/bevy", package = "bevy_mesh", optional = true }
bevy_asset = { git = "https://github.com/happyrust/bevy", package = "bevy_asset", optional = true }

base64 = "0.22.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_derive = "1.0.133"
serde_json = { version = "1.0" }
serde_yaml = "0.9"
toml = "0.8"
hash32 = "1.0.0"
bincode = "1.3.3"
clap = { version = "^4.0", features = ["derive"] }

# truck-base = { version = "0.4.0", path = "../truck/truck-base", optional = true }
# truck-geotrait = { version = "0.3.0", path = "../truck/truck-geotrait", optional = true }
# truck-geometry = { version = "0.4.0", path = "../truck/truck-geometry", optional = true }
# truck-polymesh = { version = "0.5.0", path = "../truck/truck-polymesh", optional = true }
# truck-topology = { version = "0.5.0", path = "../truck/truck-topology", optional = true }
# truck-modeling = { version = "0.5.1", path = "../truck/truck-modeling", optional = true }
# truck-meshalgo = { version = "0.3.0", path = "../truck/truck-meshalgo", optional = true }
# truck-stepio = { version = "0.2.0", path = "../truck/truck-stepio", optional = true }
rkyv = { version = "0.8.12", features = ["alloc"] }
serde_with = { version = "3.9.0", features = ["macros"] }


# geo = "0.28.0"
cavalier_contours = { git = "https://gitee.com/happydpc/cavalier_contours", features = [
    "serde",
] }
i_triangle = "0.37.2"
indexmap = { version = "2.0.0", features = ["serde"] }
pretty-hex = "0.4.0"
once_cell_serde = "1.17.1"
jsonxf = "1.1.1"
once_cell = "1.18.0"
#sea-orm = { version = "0.12.4"}
urlencoding = "2.1.3"
chrono = "0.4"

surrealdb = { git = "https://gitee.com/happydpc/surrealdb", branch = "updated", default-features = false, features = [
    "protocol-ws",
    "kv-mem"
] }
num-traits = "0.2.17"
regex = "1.11.3"
petgraph = { version = "0.8.2", features = ["serde-1"] }
cached = { version = "0.56.0", features = ["wasm", "async", "proc_macro"] }
async-recursion = "1.0.5"
async-trait = "0.1.78"
num_enum = "0.7.1"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
downcast-rs = "2.0.2"
futures = "0.3.30"
evalexpr = "13.0.0"
serde_repr = "0.1.19"
ploop-rs = { git = "https://gitee.com/happydpc/rust-ploop-processor.git", branch = "dev", package = "ploop-rs" }
parking_lot = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
rusqlite = { version = "0.32.0", features = ["bundled"], optional = true }
redb = { version = "2.6.0", optional = true }
manifold-sys = { git = "https://gitee.com/happydpc/manifold-sys", optional = true }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-async-std-rustls",
    "rust_decimal",
    "mysql",
], optional = true }


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
async-trait = "0.1"
tempfile = "3"

[[bench]]
name = "room_query_bench"
harness = false
